--- a/.openapi-generator/templates/libraries/httpclient/RequestOptions.mustache
+++ b/.openapi-generator/templates/libraries/httpclient/RequestOptions.mustache
@@ -46,10 +46,27 @@ namespace {{packageName}}.Client
         public List<Cookie> Cookies { get; set; }
 
         /// <summary>
+        /// Operation associated with the request path.
+        /// </summary>
+        public string Operation { get; set; }
+
+        /// <summary>
+        /// Index associated with the operation.
+        /// </summary>
+        public int OperationIndex { get; set; }
+
+        /// <summary>
         /// Any data associated with a request body.
         /// </summary>
         public Object Data { get; set; }
 
+        {{#hasOAuthMethods}}
+        /// <summary>
+        /// If request should be authenticated with OAuth.
+        /// </summary>
+        public bool OAuth { get; set; }
+
+        {{/hasOAuthMethods}}
         /// <summary>
         /// Constructs a new instance of <see cref="RequestOptions"/>
         /// </summary>
