Back to RestSharp with RequestOptions available in methods

--- a/.openapi-generator/templates/RequestOptions.mustache
+++ b/.openapi-generator/templates/RequestOptions.mustache
@@ -65,6 +65,10 @@ namespace {{packageName}}.Client
         /// If request should be authenticated with OAuth.
         /// </summary>
         public bool OAuth { get; set; }
+        
+        public String CorrelationId { get; set; }
+        
+        public String IdempotencyKey { get; set; }
 
         {{/hasOAuthMethods}}
         /// <summary>
