Add header options to RequestOptions

--- a/.openapi-generator/templates/RequestOptions.mustache
+++ b/.openapi-generator/templates/RequestOptions.mustache
@@ -65,10 +65,24 @@ namespace {{packageName}}.Client
         /// If request should be authenticated with OAuth.
         /// </summary>
         public bool OAuth { get; set; }
-        
-        public String CorrelationId { get; set; }
-        
-        public String IdempotencyKey { get; set; }
+
+        public String CorrelationId
+        {
+            set
+            {
+                this.HeaderParameters.Remove("BT-TRACE-ID");
+                this.HeaderParameters.Add("BT-TRACE-ID", value);
+            }
+        }
+
+        public String IdempotencyKey
+        {
+            set
+            {
+                this.HeaderParameters.Remove("BT-IDEMPOTENCY-KEY");
+                this.HeaderParameters.Add("BT-IDEMPOTENCY-KEY", value);
+            }
+        }
 
         {{/hasOAuthMethods}}
         /// <summary>
