feat: support HttpClient configuration (#259)

--- a/.openapi-generator/templates/ApiClient.mustache
+++ b/.openapi-generator/templates/ApiClient.mustache
@@ -7,6 +7,7 @@ using System.Globalization;
 using System.IO;
 using System.Linq;
 using System.Net;
+using System.Net.Http;
 using System.Reflection;
 using System.Runtime.Serialization;
 using System.Runtime.Serialization.Formatters;
@@ -172,6 +173,7 @@ namespace {{packageName}}.Client
     {{>visibility}} partial class ApiClient : ISynchronousClient{{#supportsAsync}}, IAsynchronousClient{{/supportsAsync}}
     {
         private readonly string _baseUrl;
+        private HttpClient _httpClient;
 
         /// <summary>
         /// Specifies the settings on a <see cref="JsonSerializer" /> object.
@@ -209,6 +211,7 @@ namespace {{packageName}}.Client
         public ApiClient()
         {
             _baseUrl = {{packageName}}.Client.GlobalConfiguration.Instance.BasePath;
+            _httpClient = new HttpClient();
         }
 
         /// <summary>
@@ -222,6 +225,22 @@ namespace {{packageName}}.Client
                 throw new ArgumentException("basePath cannot be empty");
 
             _baseUrl = basePath;
+            _httpClient = new HttpClient();
+        }
+
+        public ApiClient(HttpClient httpClient)
+        {
+            _baseUrl = BasisTheory.net.Client.GlobalConfiguration.Instance.BasePath;
+            _httpClient = httpClient;
+        }
+
+        public ApiClient(string basePath, HttpClient httpClient)
+        {
+            if (string.IsNullOrEmpty(basePath))
+                throw new ArgumentException("basePath cannot be empty");
+
+            _baseUrl = basePath;
+            _httpClient = httpClient;
         }
 
         /// <summary>
@@ -451,13 +470,13 @@ namespace {{packageName}}.Client
             var clientOptions = new RestClientOptions(baseUrl)
             {
                 ClientCertificates = configuration.ClientCertificates,
-                CookieContainer = cookies,
                 MaxTimeout = configuration.Timeout,
                 Proxy = configuration.Proxy,
-                UserAgent = configuration.UserAgent
+                UserAgent = configuration.UserAgent,
+                ThrowOnAnyError = true
             };
 
-            RestClient client = new RestClient(clientOptions)
+            RestClient client = new RestClient(_httpClient, clientOptions)
                 .UseSerializer(() => new CustomJsonCodec(SerializerSettings, configuration));
 
             {{#hasOAuthMethods}}
@@ -566,10 +585,11 @@ namespace {{packageName}}.Client
                 ClientCertificates = configuration.ClientCertificates,
                 MaxTimeout = configuration.Timeout,
                 Proxy = configuration.Proxy,
-                UserAgent = configuration.UserAgent
+                UserAgent = configuration.UserAgent,
+                ThrowOnAnyError = true
             };
 
-            RestClient client = new RestClient(clientOptions)
+            RestClient client = new RestClient(_httpClient, clientOptions)
                 .UseSerializer(() => new CustomJsonCodec(SerializerSettings, configuration));
 
             {{#hasOAuthMethods}}
