--- a/.openapi-generator/templates/RequestOptions.mustache
+++ b/.openapi-generator/templates/RequestOptions.mustache
@@ -9,7 +9,7 @@ namespace {{packageName}}.Client
 {
     /// <summary>
     /// A container for generalized request inputs. This type allows consumers to extend the request functionality
-    /// by abstracting away from the default (built-in) request framework (e.g. RestSharp).
+    /// by abstracting away from the default (built-in) request framework (e.g. RestSharp). 
     /// </summary>
     public class RequestOptions
     {
@@ -59,6 +59,24 @@ namespace {{packageName}}.Client
         /// Any data associated with a request body.
         /// </summary>
         public Object Data { get; set; }
+
+        public String CorrelationId
+        {
+            set
+            {
+                this.HeaderParameters.Remove("BT-TRACE-ID");
+                this.HeaderParameters.Add("BT-TRACE-ID", value);
+            }
+        }
+    
+        public String IdempotencyKey
+        {
+            set
+            {
+                this.HeaderParameters.Remove("BT-IDEMPOTENCY-KEY");
+                this.HeaderParameters.Add("BT-IDEMPOTENCY-KEY", value);
+            }
+        }
 
         {{#hasOAuthMethods}}
         /// <summary>
